rework the openapi codegen
